@@ -1,5 +1,5 @@
 %-----------------------------------------
-%	$Id: GMT_Appendix_A.tex,v 1.36 2009-05-08 01:13:40 guru Exp $
+%	$Id: GMT_Appendix_A.tex,v 1.37 2009-05-17 19:30:14 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2009.
@@ -127,7 +127,7 @@ nodes using Voronoi decomposition of the data, and
 \GMTprog{sphinterpolate} which performs gridding under tension on
 a sphere.  These programs passes the heavy work onto the two Fortran-77
 packages SSRFPACK and STRIPACK by Robert Renka; here they have been
-translated to C and require the f2c library and include file to install.
+translated to C with assistance from \progname{f2c}.
 The package is maintained by Paul Wessel.
 
 \section{spotter: backtracking and hotspotting}
